--- a/index.html
+++ b/index.html
@@ -16,18 +16,26 @@
         </nav>
     </header>
 
-    <section><!--This is for Biography-->
-        <h1 class="bio__title">The Bees Knees</h1>
-        <h1>About the Muscians</h1>
-        <p><b>"We push each other to be the best. It’s not uncommon for one of us to say ‘this needs to be better, back to the drawing board’” - Lead vocalist of The Bees Knees</b></p>
-        <h3>The Bees Knees</h3>
-        <p>
-            The Bees Knees is a pop rock band originating from San Francisco, California. The band consists a dynamic lineup featuring two lead vocalists, two guitarists, a bassist, a keyboardist and a drummer. The band achieved its first commercial success as an unsigned act, drawing attention from their future manager. Having extensive experience working with both new and seasoned acts, the manager was confident the band could succeed even further with more support, pushing The Bees Knees to sign with a well known record label.
-            
-            From there, the band has soared, gaining international recognition and ranking in the top 10 on the Poster Charts. New fans immediately fell in love with the band’s original and organic attitude, solidifying their place as one of the hottest and fastest up and coming acts of this century. Fans affectionately refer to themselves as “The Hive” and are drawn to their candid and authentic performances on stage. The Bees Knees are currently recording their second studio album, looking to be released in early 2024.</p>
+    <section class="bio"><!--This is for Biography-->
+
+        <div class="bio__content">
+            <h1 class="bio__title">The Bees Knees</h1>
+        </div>
+
+        <div class="bio__lower"> 
+            <h1>About the Muscians</h1>
+            <img src="assets/images/band.jpg">
+            <p class="bio__text"><b>"We push each other to be the best. It’s not uncommon for one of us to say ‘this needs to be better, back to the drawing board’” - Lead vocalist of The Bees Knees</b></p>
+            <h3>The Bees Knees</h3>
+            <p class="bio__text">
+                The Bees Knees is a pop rock band originating from San Francisco, California. The band consists a dynamic lineup featuring two lead vocalists, two guitarists, a bassist, a keyboardist and a drummer. The band achieved its first commercial success as an unsigned act, drawing attention from their future manager. Having extensive experience working with both new and seasoned acts, the manager was confident the band could succeed even further with more support, pushing The Bees Knees to sign with a well known record label.
+                
+                From there, the band has soared, gaining international recognition and ranking in the top 10 on the Poster Charts. New fans immediately fell in love with the band’s original and organic attitude, solidifying their place as one of the hottest and fastest up and coming acts of this century. Fans affectionately refer to themselves as “The Hive” and are drawn to their candid and authentic performances on stage. The Bees Knees are currently recording their second studio album, looking to be released in early 2024.</p>
+        </div>  
     </section>
-    <section><!--This is for photo Gallery-->
-        <h1>Photo Gallery</h1>
+
+    <section class="gallery"><!--This is for photo Gallery-->
+        <h2 class="gallery__title">Photo Gallery</h2>
         <div class="gallery__images">
             <img src="assets/images/Photo-gallery-1.jpg" alt="Gallery Image 1">
             <img src="assets/images/Photo-gallery-2.jpg" alt="Gallery Image 2">
