comment section part 1 WIP

--- a/index.html
+++ b/index.html
@@ -50,6 +50,30 @@
             <img src="assets/images/Photo-gallery-9.jpg" alt="Gallery Image 9">
         </div>
     </section>
+    <section class="comments">
+        <h2>Join the Conversation</h2>
+            <form id="comment-form">
+                <div class="input__container">
+                    <div class="comment__profile">
+                        <img src="assets/images/band.jpg" alt="Profile" class="profile-image">
+                    </div>
+                    <div class="comment-fields">
+                        <label for="name">NAME</label>
+                        <input type="text" id="name" placeholder="Enter your name" required>
+
+                        <label for="comment">COMMENT</label>
+                        <textarea id="comment" placeholder="Add a new comment" required></textarea>
+                        <button type="submit">COMMENT</button>
+                    </div>
+                </div>
+            </form>
+   
+            
+        <div class="comments__container"></div>
+        <script src="scripts/index-page.js"></script>
+
+    </section>
+
     <footer class="footer">
         <div class="footer__container">
             <div class="footer__left">
