index complete for mobile

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <form id="comment-form">
                 <div class="input__container">
                     <div class="comment__profile">
-                        <img src="assets/images/band.jpg" alt="Profile" class="profile-image">
+                        <img src="" alt="Profile" class="profile-image">
                     </div>
                     <div class="comment-fields">
                         <label for="name">NAME</label>
@@ -69,8 +69,7 @@
             </form>
    
             
-        <div class="comments__container"></div>
-        <script src="scripts/index-page.js"></script>
+        <div id="comments__container"></div>
 
     </section>
 
@@ -119,5 +118,6 @@
         <p class="footer__copyright"> Copyright The Bees Knees © 2023 All Rights Reserved </p>
 
     </footer>
+    <script src="scripts/index-page.js"></script>
 </body>
 </html>
