first draft of index page for all breakpoints

--- a/index.html
+++ b/index.html
@@ -63,7 +63,9 @@
 
                         <label for="comment">COMMENT</label>
                         <textarea id="comment" placeholder="Add a new comment" required></textarea>
-                        <button type="submit">COMMENT</button>
+                        <div class="comment__button--container">
+                            <button type="submit">COMMENT</button>
+                        </div>
                     </div>
                 </div>
             </form>
