first draft of shows page

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
         <nav class="header__nav">
             <a href="index.html" class="header__logo">BANDSITE</a>
             <ul class="header__menu">
-                <li><a href="" class="header__link active">Biography</a></li>
-                <li><a href="" class="header__link">Shows</a></li>
+                <li><a href="index.html" class="header__link active">Biography</a></li>
+                <li><a href="../pages/shows.html" class="header__link">Shows</a></li>
             </ul>
         </nav>
     </header>
@@ -24,7 +24,7 @@
             <h2>About the Muscians</h2>
 
             <div class="bio__lower"> 
-                <img src="assets/images/band.jpg" alt="Bio Image of Concert">
+                <img src="assets/images/band.jpg" alt="Bio Image of Concert (dark room concert)">
                 <p class="bio__text--a">"We push each other to be the best. It’s not uncommon for one of us to say ‘this needs to be better, back to the drawing board’” 
                 <p class="bio__vocalist" >- Lead vocalist of The Bees Knees</p>
                 <h3>The Bees Knees</h3>
@@ -39,15 +39,15 @@
     <section class="gallery"><!--This is for photo Gallery-->
         <h2 class="gallery__title">Photo Gallery</h2>
         <div class="gallery__images">
-            <img src="assets/images/Photo-gallery-1.jpg" alt="Gallery Image 1">
-            <img src="assets/images/Photo-gallery-2.jpg" alt="Gallery Image 2">
-            <img src="assets/images/Photo-gallery-3.jpg" alt="Gallery Image 3">
-            <img src="assets/images/Photo-gallery-4.jpg" alt="Gallery Image 4">
-            <img src="assets/images/Photo-gallery-5.jpg" alt="Gallery Image 5">
-            <img src="assets/images/Photo-gallery-6.jpg" alt="Gallery Image 6">
-            <img src="assets/images/Photo-gallery-7.jpg" alt="Gallery Image 7">
-            <img src="assets/images/Photo-gallery-8.jpg" alt="Gallery Image 8">
-            <img src="assets/images/Photo-gallery-9.jpg" alt="Gallery Image 9">
+            <img src="assets/images/Photo-gallery-1.jpg" alt="Gallery Image 1 - concert lights">
+            <img src="assets/images/Photo-gallery-2.jpg" alt="Gallery Image 2 - woman dancing">
+            <img src="assets/images/Photo-gallery-3.jpg" alt="Gallery Image 3 - hands waving in crowd">
+            <img src="assets/images/Photo-gallery-4.jpg" alt="Gallery Image 4 - woman on shoulders of someone in crowd">
+            <img src="assets/images/Photo-gallery-5.jpg" alt="Gallery Image 5 - strings exploded in crowd">
+            <img src="assets/images/Photo-gallery-6.jpg" alt="Gallery Image 6 - confetti in crowd">
+            <img src="assets/images/Photo-gallery-7.jpg" alt="Gallery Image 7 - rainbow lights">
+            <img src="assets/images/Photo-gallery-8.jpg" alt="Gallery Image 8 - zoom in DJ's hands">
+            <img src="assets/images/Photo-gallery-9.jpg" alt="Gallery Image 9 - singer reaches out to crowd">
         </div>
     </section>
     <section class="comments">
