Mobile - shows page finished

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             <a href="index.html" class="header__logo">BANDSITE</a>
             <ul class="header__menu">
                 <li><a href="index.html" class="header__link active">Biography</a></li>
-                <li><a href="../pages/shows.html" class="header__link">Shows</a></li>
+                <li><a href="pages/shows.html" class="header__link">Shows</a></li>
             </ul>
         </nav>
     </header>
