--- a/pages/shows.html
+++ b/pages/shows.html
@@ -20,21 +20,33 @@
         <div class="shows__album">
             <h2>Beautiful Beasts Album</h2>
         </div>
-
-        <div class="song__title">
-            <h2 class="shows__title">Stripes of Yellow x For the Stings</h2>
-        </div>
-        <div class="soundcloud-link">
-            <iframe class="soundcloud-link" width="80%" height="150" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/259114700&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
+        <div class="song__spacing">
+            <div class="song__title">
+                <h2 class="shows__title">Stripes of Yellow x For the Stings</h2>
+            </div>
+            <div class="soundcloud-link">
+                <iframe class="soundcloud-link" width="80%" height="150" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/259114700&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
+            </div>
         </div>
 
     </section>
+    <div class="show__container">
+        <div class="show__title">  
+            <p>Shows</p>
+        </div>
+        <div class="show__right">
+            <div class="show__headings">
+                <p class="heading__date">DATE</p>
+                <p class="heading__venue">VENUE</p>
+                <p class="heading__location">LOCATION</p>
+            </div>
 
-    <div class="show__title">  
-    <p>Shows</p>  
+
+            <section class="shows"> <!--for shows-->
+                <div class="shows__grid"></div>
+            </section>
+        </div>
     </div>
-
-    <section class="shows__grid"> <!--for shows--></section>
 
     <footer class="footer">
         <div class="footer__container">
