finished styling tablet for shows

--- a/pages/shows.html
+++ b/pages/shows.html
@@ -75,14 +75,14 @@
                         <br> Booking Agent for
                         <br> US / South America / Japan 
                         
-                        <br> <br> bookings@limitlessag.com 
+                        <br> <br> <div class="footer__email--b"> bookings@limitlessag.com </div>
                     </div>
                     
                     <div class="footer__text--c"> <b> <br> ARCH Entertainment </b>
 
                         <br>Booking Agent for
                         <br>UK / EU / AU
-                        <br> <br> bookings@archentertainment.com                    
+                        <br> <br> <div class="footer__email--c"> bookings@archentertainment.com </div>                  
                     </div>
                 </section>
             </div>
