--- a/index.html
+++ b/index.html
@@ -121,5 +121,6 @@
 
     </footer>
     <script src="scripts/index-page.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 </body>
 </html>
