--- a/pages/shows.html
+++ b/pages/shows.html
@@ -94,5 +94,6 @@
 
     </footer>
     <script src="../scripts/build-shows-page.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 </body>
 </html>
