--- a/index.html
+++ b/index.html
@@ -120,7 +120,9 @@
         <p class="footer__copyright"> Copyright The Bees Knees © 2023 All Rights Reserved </p>
 
     </footer>
-    <script src="scripts/index-page.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="scripts/band-site-api.js"></script>
+    <script src="scripts/index-page.js"></script>
+
 </body>
 </html>
